Updated .gitignore to iglgfdokkmkkpko

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -441,7 +441,7 @@
           <button
             id="goButton"
             class="btn btn-primary"
-            onclick="stockReconciliation()">
+            onclick="stockReconciliation();">
             Go
           </button>
         </div>
