--- a/views/layouts/index-layout.ejs
+++ b/views/layouts/index-layout.ejs
@@ -387,9 +387,12 @@
       });
   </script>
    <script>
+    // Frontend JavaScript code
+
    function showLoadingSpinner() {
   var overlay = document.getElementById("overlay");
   overlay.style.display = "block";
+  $('#addProductModal').modal('hide');
 }
 </script>
 </body>
