--- a/views/deliverycenters.ejs
+++ b/views/deliverycenters.ejs
@@ -192,7 +192,7 @@ const uniqueDeliveryPointCount = Object.keys(uniqueDeliveryPoints).length;
                   <h5 class="modal-title" id="addUnitModalLabel">Add New Unit</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
-              <form action="/add-unit" method="post">
+              <form action="/add-unit" method="post" onsubmit="return validateForm()">
                   <div class="modal-body">
                       <div class="mb-3">
                           <label for="unitName" class="form-label">Unit Name</label>
@@ -335,4 +335,28 @@ const uniqueDeliveryPointCount = Object.keys(uniqueDeliveryPoints).length;
   });
 }
 
+</script>
+<script>
+  function validateForm() {
+      // Get all required input fields
+      var requiredInputs = document.querySelectorAll('input[required], select[required]');
+      var isValid = true;
+
+      // Check if all required fields are filled
+      for (var i = 0; i < requiredInputs.length; i++) {
+          if (!requiredInputs[i].value) {
+              isValid = false;
+              break;
+          }
+      }
+
+      // If all required fields are filled, return true to submit the form
+      // Otherwise, show an alert and return false to prevent form submission
+      if (isValid) {
+        showLoadingSpinner();
+      } else {
+          alert('Please fill in all required fields.');
+          return false;
+      }
+  }
 </script>
