--- a/views/users.ejs
+++ b/views/users.ejs
@@ -185,7 +185,10 @@
               </div>
               <div class="modal-body">
                 <!-- Form -->
-                <form action="/add-user" method="post">
+                <form
+                  action="/add-user"
+                  method="post"
+                  onsubmit="return validateForm()">
                   <div class="mb-3">
                     <label for="firstName" class="form-label">First Name</label>
                     <input
@@ -360,6 +363,32 @@
           console.error("Error exporting Excel:", error);
           alert("Error exporting Excel. Please try again.");
         });
+    }
+  </script>
+  <script>
+    function validateForm() {
+      // Get all required input fields
+      var requiredInputs = document.querySelectorAll(
+        "input[required], select[required]"
+      );
+      var isValid = true;
+
+      // Check if all required fields are filled
+      for (var i = 0; i < requiredInputs.length; i++) {
+        if (!requiredInputs[i].value) {
+          isValid = false;
+          break;
+        }
+      }
+
+      // If all required fields are filled, return true to submit the form
+      // Otherwise, show an alert and return false to prevent form submission
+      if (isValid) {
+        showLoadingSpinner();
+      } else {
+        alert("Please fill in all required fields.");
+        return false;
+      }
     }
   </script>
 </div>
