--- a/views/warehouse.ejs
+++ b/views/warehouse.ejs
@@ -144,7 +144,7 @@
                       </div>
                       <div class="modal-body">
                           <!-- Warehouse Form -->
-                          <form action="/add-warehouse" method="post">
+                          <form action="/add-warehouse" method="post" onsubmit="return validateForm()">
                               <div class="mb-3">
                                   <label for="warehouseName" class="form-label">Warehouse Name</label>
                                   <input type="text" class="form-control" id="warehouseName" name="warehouseName" required>
@@ -271,4 +271,28 @@
   });
 }
 
+</script>
+<script>
+  function validateForm() {
+      // Get all required input fields
+      var requiredInputs = document.querySelectorAll('input[required], select[required]');
+      var isValid = true;
+
+      // Check if all required fields are filled
+      for (var i = 0; i < requiredInputs.length; i++) {
+          if (!requiredInputs[i].value) {
+              isValid = false;
+              break;
+          }
+      }
+
+      // If all required fields are filled, return true to submit the form
+      // Otherwise, show an alert and return false to prevent form submission
+      if (isValid) {
+        showLoadingSpinner();
+      } else {
+          alert('Please fill in all required fields.');
+          return false;
+      }
+  }
 </script>
