--- a/views/index.ejs
+++ b/views/index.ejs
@@ -488,7 +488,7 @@
                   <button
                     href="#"
                     data-bs-toggle="modal"
-                    data-bs-target="#deliveryModal" onclick="openViewModal('<%= dat.despatchnoteno %>','<%= dat.despatchdate %>','<%= dat.unit.name %>','<%= dat.unit.province %>','<%= dat.unit.contactperson %>', '<%=  JSON.stringify(dat.despatchitems) %>')">
+                    data-bs-target="#deliveryModal" onclick="openViewModal('<%= dat.deliverynotes[0].despatchnoteno %>','<%= dat.deliverynotes[0].datecreated %>','<%= dat.unit.name %>','<%= dat.unit.province %>','<%= dat.unit.contactperson %>','<%= dat.image %>','<%= dat.deliverynotes[0].receivedby.firstname %>','<%= dat.deliverynotes[0].receivedby.lastname %>','<%= dat.deliverynotes[0].receivedby.phone %>', '<%=  JSON.stringify(dat.deliverynotes[0].deliveryitems) %>','<%= token %>', '<%= dat.deliverynotes[0].id %>')">
                     <i class="fas fa-eye"></i>
                 </button>
                 </td>
@@ -555,12 +555,13 @@
             </table>
             <br></br>
             <div class="row">
-                <div class="col-md-6 text-start">
-                  <p><b>Agrifora Representative:</b></p>
-                  <div class="text-start">
-                    <img src="sirius-assets/images/logos/sirius-logo.png" alt="Agrifora Represantative's ID" style="max-width: 200px;">
-                  </div>
+              <div class="col-md-6 text-start" id="dd5">
+                <p><b>Agrifora Representative:</b></p>
+                <div class="text-start">
+                  <img id="your-img-tag-id" alt="Agrifora Represantative's ID" style="max-width: 200px;">
                 </div>
+                
+              </div>
                 <div class="col-md-6 text-end" id="dd3">
                  
                 </div>
@@ -715,57 +716,82 @@
   }
 </script>
 <script>
-  function openViewModal(dnoteno,dnotedate,unitname,unit_province,unit_contact_person, despatchitemsJSON) {
-console.log(unitname)
+      function openViewModal(dnoteno,dnotedate,unitname,unit_province,unit_contact_person,image,receivedbyfirstname,receivedbylastname, receivedbyphone, despatchitemsJSON, token, despatchid) {
 
-const dd1 = document.getElementById('dd1');
-const dd2 = document.getElementById('dd2');
-const dd3 = document.getElementById('dd3');
-const dd4 = document.getElementById('dd4');
+console.log(dnoteno)
+  const dd1 = document.getElementById('dd1');
+  const dd2 = document.getElementById('dd2');
+  const dd3 = document.getElementById('dd3');
+  const dd4 = document.getElementById('dd4');
+  const dd5 = document.getElementById('dd5');
 
-dd1.innerHTML = ``
-dd1.innerHTML = `<h5>Delivered by:</h5>
-                <p>Agrifora (Pvt) Ltd<br>
-                  28A Woodholme Rd<br>
-                Harare<br>
-                Delivery No. <span style="color: red;"><b>${dnoteno}</b></span></p>
-      
-                <p>Date: ${dnotedate}</p>`
+  dd1.innerHTML = ``
+  dd1.innerHTML = `<h5>Delivered by:</h5>
+                  <p>Agrifora (Pvt) Ltd<br>
+                    28A Woodholme Rd<br>
+                  Harare<br>
+                  Delivery No. <span style="color: red;"><b>${dnoteno}</b></span></p>
         
-dd2.innerHTML = ``
-dd2.innerHTML = `  <h5>Delivered to:</h5>
-                <p>ZNA :<br>
-                Unit : ${unitname}<br>
-                Location: ${unit_province}<br>
-                Delivery Point: ${unitname}</p>`
-dd3.innerHTML = ``
-dd3.innerHTML = ` <p><b>Received by and on behalf of ZNA</b><p>
-               <p> ${unit_contact_person}<br>
-                Unit : ${unitname}<br>
-                Location: ${unit_province}<br>
-                Delivery Point: ${unitname}<br>
-                <p>Date: ${dnotedate}</p>`
-
-let despatchitems = JSON.parse(despatchitemsJSON)                    
-dd4.innerHTML = ``
-let count =1;
-dd4.innerHTML = ``;
-        despatchitems.forEach((product) => {
+                  <p>Date: ${dnotedate}</p>`
           
-               dd4.innerHTML += `
-               <tr>
-            <td>${count}</td>
-            <td>${product.product.name}</td>
-            <td>${product.product.measureunit.symbol}</td>
-            <td>${product.quantity}</td>
-            <td>${product.received}</td>
-               </tr>
-               
-               `;
-         
-              count +=1
-         
-           });
-          }
+  dd2.innerHTML = ``
+  dd2.innerHTML = `  <h5>Delivered to:</h5>
+                  <p>ZNA :<br>
+                  Unit : ${unitname}<br>
+                  Location: ${unit_province}<br>
+                  Delivery Point: ${unitname}</p>`
+  dd3.innerHTML = ``
+  dd3.innerHTML = ` <p><b>Received by and on behalf of ZNA</b><p>
+                 <p>Firstname ${receivedbyfirstname}<br>
+                  Lastname : ${receivedbylastname}<br>
+                  Phone: ${receivedbyphone}<br></p>`
+  
+  let despatchitems = JSON.parse(despatchitemsJSON)                    
+  dd4.innerHTML = ``
+  let count =1;
+  dd4.innerHTML = ``;
+          despatchitems.forEach((product) => {
+            
+                 dd4.innerHTML += `
+                 <tr>
+              <td>${count}</td>
+              <td>${product.inventory.name}</td>
+              <td>${product.inventory.measureunit.symbol}</td>
+              <td>${product.quantity}</td>
+              <td>${product.despatchquantity}</td>
+                 </tr>
+                 
+                 `;
+           
+                count +=1
+           
+             });
+             var imageUrl = `http://197.221.234.206:82/agrifora/api/deliverynote/${despatchid}/image`;
+
+// Make a GET request to the API endpoint
+fetch(imageUrl, {
+  method: 'GET',
+  headers: {
+    'Authorization': 'Bearer ' + token,
+  },
+})
+.then(response => {
+  if (!response.ok) {
+    throw new Error('Network response was not ok');
+  }
+  return response.blob(); // Convert response to Blob
+})
+.then(blob => {
+  // Create a URL for the blob
+  var url = URL.createObjectURL(blob);
+
+  // Set the src attribute of the img tag
+  var imgTag = document.getElementById('your-img-tag-id');
+  imgTag.src = url;
+})
+.catch(error => {
+  console.error('There was a problem with the fetch operation:', error);
+});
+            }
         
 </script>
